# tritium

./: .gitignore  .time-stamp  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: FindPortAudio.cmake
include/: cst_alloc.h  cst_args.h  cst_audio.h  cst_cart.h  cst_cg.h  cst_clunits.h  cst_diphone.h  cst_endian.h  cst_error.h  cst_features.h  cst_ffeatures.h  cst_file.h  cst_hrg.h  cst_item.h  cst_lexicon.h  cst_lts.h  cst_lts_rewrites.h  cst_math.h  cst_phoneset.h  cst_regex.h  cst_relation.h  cst_sigpr.h  cst_socket.h  cst_ss.h  cst_string.h  cst_sts.h  cst_synth.h  cst_tokenstream.h  cst_track.h  cst_units.h  cst_utt_utils.h  cst_utterance.h  cst_val.h  cst_val_const.h  cst_val_defs.h  cst_viterbi.h  cst_voice.h  cst_wave.h  cst_wchar.h  tritium.h  (+1 more)
lang/: CMakeLists.txt
lang/cmu_time_awb/: CMakeLists.txt  cmu_time_awb.c
lang/cmu_us_awb/: CMakeLists.txt  cmu_us_awb.c
lang/cmu_us_kal/: CMakeLists.txt  cmu_us_kal.c
lang/cmu_us_kal16/: CMakeLists.txt  cmu_us_kal16.c
lang/cmu_us_rms/: CMakeLists.txt  cmu_us_rms.c
lang/cmu_us_slt/: CMakeLists.txt  cmu_us_slt.c
lang/cmulex/: CMakeLists.txt  cmu_lex.c  cmu_lex.h  cmu_postlex.c
lang/usenglish/: CMakeLists.txt  us_aswd.c  us_dur_stats.c  us_durz_cart.c  us_durz_cart.h  us_expand.c  us_f0.h  us_f0_model.c  us_f0lr.c  us_ffeatures.c  us_ffeatures.h  us_gpos.c  us_int_accent_cart.c  us_int_accent_cart.h  us_int_tone_cart.c  us_int_tone_cart.h  us_phoneset.c  us_text.c  us_text.h  usenglish.c  usenglish.h
lib/PortAudio/: Makefile  config.status  libtool  portaudio-2.0.pc
lib/PortAudio/.svn/: wc.db
lib/PortAudio/lib/: libportaudio.la
lib/PortAudio/lib/.libs/: libportaudio-symbols.expsym  libportaudio.exp  libportaudio.lai
lib/PortAudio/src/common/: pa_allocation.lo  pa_converters.lo  pa_cpuload.lo  pa_debugprint.lo  pa_dither.lo  pa_front.lo  pa_process.lo  pa_ringbuffer.lo  pa_stream.lo  pa_trace.lo
lib/PortAudio/src/hostapi/coreaudio/: pa_mac_core.lo  pa_mac_core_blocking.lo  pa_mac_core_utilities.lo
lib/PortAudio/src/hostapi/skeleton/: pa_hostapi_skeleton.lo
lib/PortAudio/src/os/unix/: pa_unix_hostapis.lo  pa_unix_util.lo
main/: CMakeLists.txt  compile_regexes.c  t2p_main.c  tritium_main.c  tritium_time_main.c  tritium_voice_list.c
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  au_alsa.c  au_command.c  au_none.c  au_oss.c  au_palmos.c  au_streaming.c  au_sun.c  au_wince.c  auclient.c  audio.c  auserver.c  native_audio.h
src/cg/: CMakeLists.txt  cst_cg.c  cst_mlpg.c  cst_mlpg.h  cst_mlsa.c  cst_mlsa.h  cst_vc.c
src/hrg/: CMakeLists.txt  cst_ffeature.c  cst_item.c  cst_rel_io.c  cst_relation.c  cst_utterance.c
src/lexicon/: CMakeLists.txt  cst_lexicon.c  cst_lts.c  cst_lts_rewrites.c
src/regex/: CMakeLists.txt  cst_regex.c  regexp.c
src/speech/: CMakeLists.txt  cst_lpcres.c  cst_track.c  cst_track_io.c  cst_wave.c  cst_wave_io.c  cst_wave_utils.c  rateconv.c
src/stats/: CMakeLists.txt  cst_cart.c  cst_ss.c  cst_viterbi.c
src/synth/: CMakeLists.txt  cst_ffeatures.c  cst_phoneset.c  cst_ssml.c  cst_synth.c  cst_utt_utils.c  cst_voice.c  tritium.c
src/utils/: CMakeLists.txt  cst_alloc.c  cst_args.c  cst_endian.c  cst_error.c  cst_features.c  cst_file_palmos.c  cst_file_stdio.c  cst_file_wince.c  cst_mmap.c  cst_mmap_none.c  cst_mmap_posix.c  cst_mmap_win32.c  cst_socket.c  cst_string.c  cst_tokenstream.c  cst_val.c  cst_val_const.c  cst_val_user.c  cst_wchar.c
src/wavesynth/: CMakeLists.txt  cst_clunits.c  cst_diphone.c  cst_reflpc.c  cst_sigpr.c  cst_sts.c  cst_units.c
tests/: CMakeLists.txt
