cmake_minimum_required(VERSION 3)
project(tritium_Lang)

include_directories(cmulex)
include_directories(usenglish)

add_subdirectory(cmulex)
add_subdirectory(usenglish)
add_subdirectory(cmu_us_kal)
add_subdirectory(cmu_time_awb)
add_subdirectory(cmu_us_kal16)
add_subdirectory(cmu_us_awb)
add_subdirectory(cmu_us_rms)
add_subdirectory(cmu_us_slt)